# stamatics-pbr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
src/: base.h  brdfs.h  camera.h  config.h  debug.h  integrators.h  main.cpp  material.cpp  material.h  math_definitions.h  pbr.h  radiometry.h  renderer.h  scene.cpp  scene.h  units.h
src/core/: base.h  math_definitions.h  units.cpp  units.h
src/integrators/: PathIntegrator.h
src/materials/: material.cpp  material.h  radiometry.h
src/scene/: camera.h  scene.cpp  scene.h
tools/sampler/: main.cpp  sampler.h
